--- a/scripts/modules/codegen/ast.jinja2
+++ b/scripts/modules/codegen/ast.jinja2
@@ -93,7 +93,7 @@ void {{ node_type.cpp_name }}::{{ member.name }}({{member.cpp_type}} new_{{membe
 {%- endmacro %}
 
 {% macro _traverse_impl(node_type) -%}
-void {{ node_type.cpp_name }}::do_traverse_children(FunctionRef<void(AstNode*)> callback) {
+void {{ node_type.cpp_name }}::do_traverse_children(FunctionRef<void(AstNode*)> callback) const {
 {% if node_type.walk_order == "base_first" %}
     {{ node_type.base.cpp_name }}::do_traverse_children(callback);
 {% endif %}
@@ -142,7 +142,7 @@ class {{ node_type.cpp_name }} {{ "final" if node_type.final else "" }} : public
 {%- endfor %}
 
 protected:
-    void do_traverse_children(FunctionRef<void(AstNode*)> callback) override;
+    void do_traverse_children(FunctionRef<void(AstNode*)> callback) const override;
     void do_mutate_children(MutableAstVisitor& visitor) override;
 
 {{ "private:" if node_type.members else "" }}
